# endometriosis-signature

./: .gitignore  README.md  pyproject.toml
archive/: filtering.py  load.py  signature.py
data/processed/: DSigDB_tableDOWN.txt  DSigDB_tableUP.txt  differential_expression.csv  down_genes.txt  down_genes_mapped.txt  down_genes_mapped_selected.txt  feature_columns.json  ranked_signature_probes.csv  signature_l1_sweep.csv  signature_size_sweep.csv  similarity_search_result-69ef22cc3ab77d002d45af12.csv  stable_mapped_probes.csv  stable_probe_counts.csv  stable_probe_size_sweep.csv  up_genes.txt  up_genes_mapped.txt  up_genes_mapped_selected.txt  validation_gse135485_sig3.csv  validation_gse135485_sig7.csv  validation_gse25628_sig3.csv  validation_gse25628_sig7.csv
data/raw/: GSE51981_family.xml
scripts/: build_dataset.py  map_de_genes.py  plot_roc.py  plot_roc_all.py  plot_signature_size.py  plot_stable_probe_sweep.py  run_differential_expression.py  run_signature.py  run_signature_l1.py  validate_external.py  validate_gse135485.py  validate_gse25628.py
src/endometriosis_signature/: annotation.py  constants.py  dataset.py  modeling.py
src/endometriosis_signature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
